# kamaz_test_task

./: CMakeLists.txt  README.md  package.xml
launch/: kamaz_test_task.launch
msg/: KamazPath.msg
scripts/: node.py
srv/: ClearTrajectory.srv  StartRecord.srv  StopRecord.srv
